# autonomous_drone_robofest

./: readme.md  test.py
drone_ws/: rebuild.sh
drone_ws/install/: local_setup.sh  setup.sh
drone_ws/install/auto_drone/share/ament_index/resource_index/package_run_dependencies/: auto_drone
drone_ws/install/auto_drone/share/auto_drone/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
drone_ws/install/auto_drone/share/auto_drone/launch/: arena_with_iris.launch.py
drone_ws/install/auto_drone/share/auto_drone/models/arena/: model.config  model.sdf
drone_ws/install/auto_drone/share/auto_drone/models/iris_drone/: model.sdf
drone_ws/install/auto_drone/share/auto_drone/worlds/: arena.world
drone_ws/log/: latest_build
drone_ws/src/auto_drone/: CMakeLists.txt
drone_ws/src/auto_drone/env_hooks/: gazebo_model_path.dsv
drone_ws/src/auto_drone/models/iris_drone/: model.config
worlds/: robofest_arena.world
yolo11n_ncnn_model/: metadata.yaml
