<?xml version="1.0"?>
<package format="3">
  <name>auto_drone</name>
  <version>0.0.1</version>
  <description>Autonomous Drone developing for the Robofest OpenCategory</description>
  <maintainer email="kirangunathilaka@gmail.com">kirangunathilaka</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch & Python tooling -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Gazebo and ROS interface -->
  <exec_depend>gazebo_ros</exec_depend>

  <!-- calls /spawn_entity service directly -->
  <exec_depend>gazebo_msgs</exec_depend>

  <!-- app deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
